# pipx-run-demo

./: README.md  pyproject.toml
examples/: test-app.py
pipx_run/: __about__.py  __init__.py  __main__.py
